--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h2>Lorem</h2>
             </aside>
             <div class="botao">
-                <button><a href="pag02.html" target="_self" rel="next">2° PÁGINA</a></button>
+                <button><a href="Pag2-calculadora.html" target="_self" rel="next">2° PÁGINA</a></button>
             </div>
         </section>
     </main>
