--- a/Pag2-calculadora.html
+++ b/Pag2-calculadora.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <a href="index.html"><button class="page-button">Página 1</button></a>
+    <a href="index.html"><button class="page-button">Voltar</button></a>
 
     <script src="Script/script.js"></script>
 </body>
