--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site</title>
     <link rel="stylesheet" href="Estilos/style.css">
-    <link rel="shortcut icon" href="Imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagens/logo-html.png" type="image/x-icon">
 </head>
 
 <body>
     <main>
         <section class="primeiro">
             <div class="text">
-                <h1>Meu Portfólio (em produção)</h1>
+                <h1>Meu site(em produção)</h1>
                 <p>Oi, me chamo Igor e estou em constante aprendizado, me motivando todos os dias a estudar tanto front
                     quanto back-end. Minhas habilidades em HTML e CSS são mais avançadas. Em JavaScript (para o front)
                     ainda sou intermediário e em python estou aprendendo a automatizar rotinas e fazer a análise e
@@ -57,7 +56,7 @@
 
         <section class="segundo">
             <div class="text">
-                <h1>Sobre mim</h1>
+                <h1>Projetos</h1>
                 <p>vem por ai...</p>
             </div>
 
@@ -69,13 +68,17 @@
             -->
 
             <div class="caixas">
-                <article class="box"></article>
-                <article class="box"></article>
+                <a href="Pag2-calculadora.html">
+                    <div class="box" id="box-calculadora" title="Calculadora"></div>
+                </a>
+                <a href="https://igorangelotti.github.io/Portfolio/" target="_blank">
+                    <div class="box" id="box-portfolio" title="Portfolio"></div>
+                </a>
                 <article class="box"></article>
                 <article class="box"></article>
             </div>
             <aside>
-                <h2>Lorem</h2>
+                <h2>Meus projetos</h2>
             </aside>
             <div class="botao">
                 <button><a href="Pag2-calculadora.html" target="_self" rel="next">2° PÁGINA</a></button>
